--- a/Unity/Assets/Scripts/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Assets/Scripts/HotfixView/Unity.HotfixView.asmdef
@@ -22,5 +22,8 @@
         "UNITY_COMPILE || UNITY_EDITOR"
     ],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": false,
+    "optionalUnityReferences": [],
+    "additionalReferences": [],
+    "compilerOptions": ""
 }
