--- a/Unity/Assets/Scripts/Model/Unity.Model.asmdef
+++ b/Unity/Assets/Scripts/Model/Unity.Model.asmdef
@@ -17,5 +17,8 @@
         "UNITY_COMPILE || UNITY_EDITOR"
     ],
     "versionDefines": [],
-    "noEngineReferences": true
+    "noEngineReferences": true,
+    "optionalUnityReferences": [],
+    "additionalReferences": [],
+    "compilerOptions": ""
 }
