Loader中的Editor重命名

--- a/Unity/Packages/com.et.loader/Scripts/Editor/Unity.Loader.Editor.asmdef
+++ b/Unity/Packages/com.et.loader/Scripts/Editor/Unity.Loader.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.Editor",
+    "name": "Unity.Loader.Editor",
     "rootNamespace": "",
     "references": [
         "Unity.Core",
