Loader包拆出了YooAssets包

--- a/Unity/Packages/com.et.core/Scripts/Editor/Unity.Core.Editor.asmdef
+++ b/Unity/Packages/com.et.core/Scripts/Editor/Unity.Core.Editor.asmdef
@@ -1,22 +1,17 @@
 {
-    "name": "Unity.Loader",
+    "name": "Unity.Core.Editor",
     "rootNamespace": "ET",
     "references": [
-        "Unity.Core",
-        "HybridCLR.Runtime",
+        "Unity.Mathematics",
         "MemoryPack",
-        "YooAsset",
-        "YooAsset.Editor",
         "Unity.ThirdParty",
-        "Unity.YooAssets"
+        "Unity.Core"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
-    "precompiledReferences": [
-        ""
-    ],
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
