--- a/Unity/Packages/com.et.loader/Scripts/Editor/Unity.Loader.Editor.asmdef
+++ b/Unity/Packages/com.et.loader/Scripts/Editor/Unity.Loader.Editor.asmdef
@@ -8,7 +8,8 @@
         "HybridCLR.Editor",
         "YooAsset",
         "Unity.Mathematics",
-        "Unity.ThirdParty"
+        "Unity.ThirdParty",
+        "Unity.Core.Editor"
     ],
     "includePlatforms": [
         "Editor"
