--- a/Unity/Packages/com.et.yooassets/package.json
+++ b/Unity/Packages/com.et.yooassets/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "com.et.loader",
-  "displayName": "ET.Loader",
+  "name": "com.et.yooassets",
+  "displayName": "ET.YooAssets",
   "version": "0.0.1",
   "unity": "2022.3",
-  "description": "et loader",
+  "description": "et yooassets",
   "author": {
     "name": "tanghai",
     "url": "https://github.com/egametang/ET"
@@ -14,8 +14,8 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "com.et.core": "",
+    "com.tuyoogame.yooasset": "2.1.1",
     "com.et.thirdparty": "",
-    "com.et.yooassets": ""
+    "com.et.core": ""
   }
 }
