去掉了thirdparty包，如果需要第三方库，应该做成一个个UnityPackage，不要统一放到thirdparty中

--- a/Unity/Packages/com.et.core/Scripts/Core/Unity.Core.asmdef
+++ b/Unity/Packages/com.et.core/Scripts/Core/Unity.Core.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "ET",
     "references": [
         "Unity.Mathematics",
-        "MemoryPack",
-        "Unity.ThirdParty"
+        "MemoryPack"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
