--- a/Unity/Packages/com.et.core/package.json
+++ b/Unity/Packages/com.et.core/package.json
@@ -15,7 +15,6 @@
   "relatedPackages": {},
   "dependencies": {
     "com.unity.mathematics": "1.2.6",
-    "com.cysharp.memorypack": "",
-    "com.et.thirdparty": ""
+    "com.cysharp.memorypack": ""
   }
 }
