ComponentViewEditor扫描所有程序集，这样可以在其它包中扩展

--- a/Unity/Packages/com.et.core/Scripts/Editor/Unity.Core.Editor.asmdef
+++ b/Unity/Packages/com.et.core/Scripts/Editor/Unity.Core.Editor.asmdef
@@ -2,9 +2,9 @@
     "name": "Unity.Core.Editor",
     "rootNamespace": "ET",
     "references": [
-        "Unity.Mathematics",
         "MemoryPack",
-        "Unity.Core"
+        "Unity.Core",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
