--- a/Unity/Packages/com.et.yooassets/package.json
+++ b/Unity/Packages/com.et.yooassets/package.json
@@ -15,6 +15,7 @@
   "relatedPackages": {},
   "dependencies": {
     "com.tuyoogame.yooasset": "2.1.1",
-    "com.et.core": ""
+    "com.et.core": "",
+    "com.unity.mathematics": "1.2.6"
   }
 }
