--- a/Unity/Packages/com.et.statesync/Runtime~/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Packages/com.et.statesync/Runtime~/Hotfix/Unity.Hotfix.asmdef
@@ -4,6 +4,7 @@
         "Unity.Mathematics",
         "Unity.Loader",
         "MemoryPack",
-        "Unity.Model"
+        "Unity.Model",
+        "Unity.DotRecast"
     ]
 }
