--- a/Unity/Assets/Scripts/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Hotfix/Unity.Hotfix.asmdef
@@ -7,7 +7,8 @@
         "MemoryPack",
         "Unity.Model",
         "Unity.ThirdParty",
-        "Unity.Loader"
+        "Unity.Loader",
+        "Unity.DotRecast"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
