--- a/Unity/Packages/com.et.loader/Editor/Unity.Loader.Editor.asmdef
+++ b/Unity/Packages/com.et.loader/Editor/Unity.Loader.Editor.asmdef
@@ -7,7 +7,8 @@
         "HybridCLR.Runtime",
         "HybridCLR.Editor",
         "YooAsset",
-        "Unity.Core.Editor"
+        "Unity.Core.Editor",
+        "Unity.YooAssets"
     ],
     "includePlatforms": [
         "Editor"
