ResourcesLoaderComponent.cs放到Unity.YooAssets包中

--- a/Unity/Assets/Scripts/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Assets/Scripts/HotfixView/Unity.HotfixView.asmdef
@@ -10,7 +10,8 @@
         "Unity.Model",
         "Unity.Hotfix",
         "Unity.ModelView",
-        "YooAsset"
+        "YooAsset",
+        "Unity.YooAssets"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
