--- a/Unity/Packages/com.et.statesync/Runtime~/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Packages/com.et.statesync/Runtime~/HotfixView/Unity.HotfixView.asmdef
@@ -7,6 +7,7 @@
         "Unity.Model",
         "Unity.Hotfix",
         "Unity.ModelView",
+        "Unity.YooAssets",
         "YooAsset"
     ]
 }
