工程全部改成ET开头

--- a/Unity/Assets/Scripts/Hotfix/ET.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Hotfix/ET.Hotfix.asmdef
@@ -1,14 +1,13 @@
 {
-    "name": "Unity.Hotfix",
+    "name": "ET.Hotfix",
     "rootNamespace": "ET",
     "references": [
-        "Unity.Core",
+        "ET.Core",
         "Unity.Mathematics",
         "MemoryPack",
-        "Unity.Model",
-        "Unity.ThirdParty",
-        "Unity.Loader",
-        "Unity.DotRecast"
+        "ET.Model",
+        "ET.Loader",
+        "ET.DotRecast"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
