--- a/Unity/Packages/com.et.core/Runtime~/Hotfix/ET.Hotfix.asmdef
+++ b/Unity/Packages/com.et.core/Runtime~/Hotfix/ET.Hotfix.asmdef
@@ -1,8 +1,8 @@
 {
     "references": [
-        "Unity.Core",
+        "ET.Core",
         "Unity.Mathematics",
         "MemoryPack",
-        "Unity.DotRecast"
+        "ET.Model"
     ]
 }
