--- a/Unity/Packages/com.et.core/Runtime~/Model/ET.Model.asmdef
+++ b/Unity/Packages/com.et.core/Runtime~/Model/ET.Model.asmdef
@@ -1,7 +1,6 @@
 {
     "references": [
-        "Unity.ThirdParty",
-        "Unity.Core",
+        "ET.Core",
         "Unity.Mathematics",
         "MemoryPack"
     ]
