--- a/Unity/Packages/com.et.core/Runtime~/ModelView/ET.ModelView.asmdef
+++ b/Unity/Packages/com.et.core/Runtime~/ModelView/ET.ModelView.asmdef
@@ -1,9 +1,9 @@
 {
     "references": [
-        "Unity.Core",
+        "ET.Core",
         "Unity.Mathematics",
-        "Unity.Loader",
-        "Unity.Model",
+        "ET.Loader",
+        "ET.Model",
         "YooAsset"
     ]
 }
