--- a/Unity/Packages/com.et.dotrecast/Runtime/ET.DotRecast.asmdef
+++ b/Unity/Packages/com.et.dotrecast/Runtime/ET.DotRecast.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.DotRecast",
+    "name": "ET.DotRecast",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
