--- a/Unity/Packages/com.et.loader/Runtime/ET.Loader.asmdef
+++ b/Unity/Packages/com.et.loader/Runtime/ET.Loader.asmdef
@@ -1,13 +1,13 @@
 {
-    "name": "Unity.Loader",
+    "name": "ET.Loader",
     "rootNamespace": "ET",
     "references": [
-        "Unity.Core",
+        "ET.Core",
         "HybridCLR.Runtime",
         "MemoryPack",
         "YooAsset",
         "YooAsset.Editor",
-        "Unity.YooAssets"
+        "ET.YooAssets"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
