--- a/Unity/Assets/Scripts/ModelView/ET.ModelView.asmdef
+++ b/Unity/Assets/Scripts/ModelView/ET.ModelView.asmdef
@@ -1,12 +1,12 @@
 {
-    "name": "Unity.Model",
+    "name": "ET.ModelView",
     "rootNamespace": "ET",
     "references": [
-        "Unity.ThirdParty",
-        "Unity.Core",
+        "ET.Core",
         "Unity.Mathematics",
-        "MemoryPack",
-        "Unity.DotRecast"
+        "ET.Loader",
+        "ET.Model",
+        "YooAsset"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -18,7 +18,7 @@
         "UNITY_COMPILE || UNITY_EDITOR"
     ],
     "versionDefines": [],
-    "noEngineReferences": true,
+    "noEngineReferences": false,
     "optionalUnityReferences": [],
     "additionalReferences": [],
     "compilerOptions": ""
