--- a/Unity/Packages/com.et.core/Runtime/ET.Core.asmdef
+++ b/Unity/Packages/com.et.core/Runtime/ET.Core.asmdef
@@ -1,14 +1,12 @@
 {
-    "name": "Unity.YooAssets",
-    "rootNamespace": "",
+    "name": "ET.Core",
+    "rootNamespace": "ET",
     "references": [
-        "GUID:e34a5702dd353724aa315fb8011f08c3",
-        "GUID:9ef2053bcf13a254ab3940a767f7b1a5",
-        "GUID:4d1926c9df5b052469a1c63448b7609a"
+        "MemoryPack"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
