--- a/Unity/Packages/com.et.loader/Editor/ET.Loader.Editor.asmdef
+++ b/Unity/Packages/com.et.loader/Editor/ET.Loader.Editor.asmdef
@@ -1,10 +1,18 @@
 {
-    "name": "Unity.Core",
+    "name": "ET.Loader.Editor",
     "rootNamespace": "ET",
     "references": [
-        "MemoryPack"
+        "ET.Core",
+        "HybridCLR.Runtime",
+        "HybridCLR.Editor",
+        "YooAsset",
+        "ET.YooAssets",
+        "ET.Core.Editor",
+        "ET.Loader"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
