--- a/Unity/Packages/com.et.loader/DotNet~/ET.Loader.csproj
+++ b/Unity/Packages/com.et.loader/DotNet~/ET.Loader.csproj
@@ -3,7 +3,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>ET</RootNamespace>
         <LangVersion>12</LangVersion>
-        <AssemblyName>Loader</AssemblyName>
+        <AssemblyName>ET.Loader</AssemblyName>
     </PropertyGroup>
     <PropertyGroup>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
@@ -11,25 +11,22 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <DefineConstants>DOTNET</DefineConstants>
-        <OutputPath>..\..\Bin\</OutputPath> 
+        <OutputPath>./obj</OutputPath> 
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <Optimize>false</Optimize>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"> 
         <DefineConstants>DOTNET</DefineConstants>
-        <OutputPath>..\..\Bin\</OutputPath>
+        <OutputPath>./obj</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <Optimize>true</Optimize>
     </PropertyGroup>
+    
     <ItemGroup>
-        
-    </ItemGroup> 
-    <ItemGroup> 
-        <ProjectReference Include="..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-        <ProjectReference Include="..\..\Share\Share.SourceGenerator\Share.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-        <ProjectReference Include="..\Core\DotNet.Core.csproj" />
-        <ProjectReference Include="..\ThirdParty\DotNet.ThirdParty.csproj" />
+      <ProjectReference Include="..\..\..\..\DotNet\Model\ET.Model.csproj" />
+      <ProjectReference Include="..\..\..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" /> 
+      <ProjectReference Include="..\..\..\..\Share\SourceGenerator\Share.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 </Project>
