--- a/Unity/Packages/com.et.mathematics/Runtime~/ET.Mathematics.csproj
+++ b/Unity/Packages/com.et.mathematics/Runtime~/ET.Mathematics.csproj
@@ -5,7 +5,7 @@
         <Nullable>disable</Nullable>
         <LangVersion>12</LangVersion>
         <RootNamespace>ET</RootNamespace>
-        <AssemblyName>ThirdParty</AssemblyName>
+        <AssemblyName>ET.Mathematics</AssemblyName>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -15,7 +15,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <DefineConstants>DOTNET;UNITY_DOTSPLAYER</DefineConstants>
-        <OutputPath>..\..\Bin\</OutputPath>
+        <OutputPath>./obj</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <Optimize>true</Optimize>
@@ -24,30 +24,15 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
         <DefineConstants>DOTNET;UNITY_DOTSPLAYER</DefineConstants>
-        <OutputPath>..\..\Bin\</OutputPath>
+        <OutputPath>./obj</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <NoWarn>0169,0649,3021,8981,NU1903</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="..\..\Unity\Packages\com.et.thirdparty\Scripts\ETTask\**\*.cs">
-            <Link>ETTask/%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Library\PackageCache\com.unity.mathematics*\Unity.Mathematics\**\*.cs">
+        <Compile Include="..\..\..\Library\PackageCache\com.unity.mathematics*\Unity.Mathematics\**\*.cs">
             <Link>Unity.Mathematics/$([System.String]::new(%(RecursiveDir)).Substring($([System.String]::new(%(RecursiveDir)).Indexof("Unity.Mathematics"))).Replace("Unity.Mathematics", ""))/%(FileName)%(Extension)</Link>
         </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="CommandLineParser" Version="2.8.0" />
-        <PackageReference Include="EPPlus" Version="5.8.8" />
-        <PackageReference Include="MemoryPack" Version="1.10.0" />
-        <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
-        <PackageReference Include="NLog" Version="4.7.15" />
-        <PackageReference Include="SharpZipLib" Version="1.3.3" />
-        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.0.1" />
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" />
     </ItemGroup>
 </Project>
