--- a/Unity/Packages/com.et.statesync/package.json
+++ b/Unity/Packages/com.et.statesync/package.json
@@ -19,6 +19,7 @@
     "com.et.loader": "",
     "com.et.demores": "",
     "com.et.dotrecast": "",
-    "com.unity.mathematics": "1.2.6"
+    "com.unity.mathematics": "1.2.6",
+    "com.et.router": ""
   }
 }
