调通dotnet运行服务端

--- a/Unity/Assets/Scripts/Hotfix/ET.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Hotfix/ET.Hotfix.asmdef
@@ -9,18 +9,15 @@
         "ET.Loader",
         "ET.DotRecast"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "UNITY_COMPILE || UNITY_EDITOR"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": true,
-    "optionalUnityReferences": [],
-    "additionalReferences": [],
-    "compilerOptions": ""
+    "noEngineReferences": true
 }
