--- a/DotNet/Model/ET.Model.csproj
+++ b/DotNet/Model/ET.Model.csproj
@@ -61,6 +61,7 @@
         <ProjectReference Include="..\..\Share\SourceGenerator\Share.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\..\Unity\Packages\com.et.core\DotNet~\ET.Core.csproj" />
         <ProjectReference Include="..\..\Unity\Packages\com.et.dotrecast\DotNet~\ET.DotRecast.csproj" />
+        <ProjectReference Include="..\..\Unity\Packages\com.et.loader\DotNet~\ET.Loader.csproj" />
         <ProjectReference Include="..\..\Unity\Packages\com.et.mathematics\Runtime~\ET.Mathematics.csproj" />
     </ItemGroup> 
 </Project>
