--- a/Unity/Packages/com.et.loader/DotNet~/ET.Loader.csproj
+++ b/Unity/Packages/com.et.loader/DotNet~/ET.Loader.csproj
@@ -25,8 +25,8 @@
     </PropertyGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\DotNet\Model\ET.Model.csproj" />
       <ProjectReference Include="..\..\..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" /> 
       <ProjectReference Include="..\..\..\..\Share\SourceGenerator\Share.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+      <ProjectReference Include="..\..\com.et.core\DotNet~\ET.Core.csproj" />
     </ItemGroup>
 </Project>
