加上了com.unity.upm.develop包

--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
+    "com.unity.upm.develop": "0.5.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
