--- a/Share/Analyzer/ET.Analyzer.csproj
+++ b/Share/Analyzer/ET.Analyzer.csproj
@@ -5,6 +5,7 @@
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <Nullable>enable</Nullable>
         <LangVersion>12</LangVersion>
+        <RootNamespace>ET</RootNamespace>
     </PropertyGroup>
 
     <PropertyGroup>
