--- a/Share/SourceGenerator/ET.SourceGenerator.csproj
+++ b/Share/SourceGenerator/ET.SourceGenerator.csproj
@@ -11,6 +11,7 @@
         <NoWarn>1701;1702;RS2008</NoWarn>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+        <RootNamespace>ET</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,8 +31,8 @@
         </PackageReference>
     </ItemGroup>
 
-<!--    <Target Name="PostBuild" AfterTargets="PostBuildEvent">-->
-<!--        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Packages/com.et.core/Plugins/" ContinueOnError="false" />-->
-<!--    </Target>-->
+<!--    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Packages/com.et.core/Plugins/" ContinueOnError="false" />
+    </Target>-->
 
 </Project>
