修复分析器跟sourcegenerator的问题

--- a/Unity/Assets/Scripts/Hotfix/ET.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Hotfix/ET.Hotfix.asmdef
@@ -6,8 +6,8 @@
         "Unity.Mathematics",
         "MemoryPack",
         "ET.Model",
-        "ET.Loader",
-        "ET.DotRecast"
+        "ET.Recast",
+        "ET.Loader"
     ],
     "includePlatforms": [
         "Editor"
