--- a/Unity/Packages/com.et.statesync/Runtime~/Hotfix/ET.Hotfix.asmdef
+++ b/Unity/Packages/com.et.statesync/Runtime~/Hotfix/ET.Hotfix.asmdef
@@ -4,7 +4,6 @@
         "Unity.Mathematics",
         "ET.Loader",
         "MemoryPack",
-        "ET.Model",
-        "ET.DotRecast"
+        "ET.Model"
     ]
 }
