--- a/Share/Analyzer/Share.Analyzer.csproj
+++ b/Share/Analyzer/Share.Analyzer.csproj
@@ -21,13 +21,13 @@
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <NoWarn>1701;1702;RS2008</NoWarn>
     </PropertyGroup>
-
-    <ItemGroup>
-        <Compile Include="../../Unity/Assets/Scripts/Core/Helper/StringHashHelper.cs" />
-    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.1" PrivateAssets="all" />
         <PackageReference Update="NETStandard.Library" PrivateAssets="all" />
     </ItemGroup>
+
+<!--    <Target Name="PostBuild" AfterTargets="PostBuildEvent">-->
+<!--        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Assets/Plugins/" ContinueOnError="false" />-->
+<!--    </Target>-->
 
 </Project>
