--- a/DotNet/Model/ET.Model.csproj
+++ b/DotNet/Model/ET.Model.csproj
@@ -27,31 +27,31 @@
     </PropertyGroup>
     <ItemGroup>
 
-        <Compile Include="..\..\Unity\Library\PackageCache\com.et.*\Runtime~\Model\Share\**\*.cs">
+        <Compile Include="..\..\Unity\Library\PackageCache\com.et.*\Scripts\Model\Share\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Library\PackageCache\com.et.*\Runtime~\Model\Server\**\*.cs">
+        <Compile Include="..\..\Unity\Library\PackageCache\com.et.*\Scripts\Model\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Library\PackageCache\com.et.*\Runtime~\Model\CodeMode\Server\**\*.cs">
+        <Compile Include="..\..\Unity\Library\PackageCache\com.et.*\Scripts\Model\CodeMode\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Packages\com.et.*\Runtime~\Model\Share\**\*.cs">
+        <Compile Include="..\..\Unity\Packages\com.et.*\Scripts\Model\Share\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Packages\com.et.*\Runtime~\Model\Server\**\*.cs">
+        <Compile Include="..\..\Unity\Packages\com.et.*\Scripts\Model\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Packages\com.et.*\Runtime~\Model\CodeMode\Server\**\*.cs">
+        <Compile Include="..\..\Unity\Packages\com.et.*\Scripts\Model\CodeMode\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Generate\*\Model\Server\**\*.cs">
+        <Compile Include="..\..\Unity\Assets\Generate\Model\*\Server\**\*.cs">
             <Link>Generate\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
         
@@ -61,7 +61,7 @@
         <ProjectReference Include="..\..\Share\SourceGenerator\ET.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\..\Unity\Packages\com.et.core\DotNet~\ET.Core.csproj" />
         <ProjectReference Include="..\..\Unity\Packages\com.et.loader\DotNet~\ET.Loader.csproj" />
-        <ProjectReference Include="..\..\Unity\Packages\com.et.mathematics\Runtime~\ET.Mathematics.csproj" />
+        <ProjectReference Include="..\..\Unity\Packages\com.et.mathematics\DotNet~\ET.Mathematics.csproj" />
         <ProjectReference Include="..\..\Unity\Packages\com.et.recast\DotNet~\ET.Recast.csproj" />
     </ItemGroup> 
 </Project>
