调整Proto Excel目录结构，保持跟其它包一致

--- a/Unity/Packages/com.et.excel/CodeMode/Ignore.ET.Excel.CodeMode.asmdef
+++ b/Unity/Packages/com.et.excel/CodeMode/Ignore.ET.Excel.CodeMode.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Ignore.ET.Excel",
+    "name": "Ignore.ET.Excel.CodeMode",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
