--- a/Unity/Packages/com.et.proto/CodeMode/Ignore.ET.Proto.CodeMode.asmdef
+++ b/Unity/Packages/com.et.proto/CodeMode/Ignore.ET.Proto.CodeMode.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Ignore.ET.Proto",
+    "name": "Ignore.ET.Proto.CodeMode",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
